fix: changed product card width and aligned main and header

--- a/css/style.css
+++ b/css/style.css
@@ -91,14 +91,14 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-bottom: 50px;
 }
 
 
 .product-card {
   margin-top: 30px;
-  width: calc(100% / 3);
+  width: 30%;
   max-width: 300px;
   padding-bottom: 50px;
 }
